# Palpation_smoother

./: .gitignore  CMakeLists.txt  calib_stage1_inner.csv  calib_stage2_outer.csv
cpp/: CMakeLists.txt
cpp/include/: Compliance.hpp  CsvLoader.hpp  RobotArmModel.hpp  Tube.hpp  rk2.hpp
cpp/include/factors/: TipPoseTangentCalibrationFactors.hpp  TipPoseTangentFactor.hpp
cpp/src/: CsvLoader.cpp  RobotArmModel.cpp  TipPoseTangentCalibrationFactors.cpp  main  main copy.cpp  main.cpp  main_calibration.cpp  main_gtsam.cpp
include/: CosseratSolver.hpp  RobotArmModel.hpp  StaticsEvaluation.hpp
include/factors/: TipPoseTangentFactor2D.hpp  TipPoseTangentFactor2D_Bias.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ndi_aurora_node/lib/ndi_aurora_node/: ndi_aurora_publisher
install/ndi_aurora_node/share/ament_index/resource_index/package_run_dependencies/: ndi_aurora_node
install/ndi_aurora_node/share/ament_index/resource_index/parent_prefix_path/: ndi_aurora_node
install/ndi_aurora_node/share/ndi_aurora_node/: local_setup.sh  package.bash  package.dsv  package.sh
install/ndi_aurora_node/share/ndi_aurora_node/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_ndi_aurora_nodeExport-noconfig.cmake
install/netft_reader/lib/netft_reader/: netft_node  netft_raw_node
install/netft_reader/share/netft_reader/: local_setup.sh  package.bash  package.ps1  package.sh
install/palpation_calibration/lib/palpation_calibration/: calibration_runner
install/palpation_calibration/share/palpation_calibration/: package.sh
install/rk2_tutorial/share/rk2_tutorial/: package.bash  package.zsh
install/sync_logger_node/share/ament_index/resource_index/package_run_dependencies/: sync_logger_node
install/sync_logger_node/share/ament_index/resource_index/parent_prefix_path/: sync_logger_node
install/sync_logger_node/share/sync_logger_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros2/: calib_stage1_inner.csv  calib_stage2_outer.csv
ros2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/install/ndi_aurora_node/lib/ndi_aurora_node/: ndi_aurora_publisher  ndi_aurora_raw_node
ros2/install/ndi_aurora_node/share/ament_index/resource_index/parent_prefix_path/: ndi_aurora_node
ros2/install/ndi_aurora_node/share/ndi_aurora_node/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
ros2/install/ndi_aurora_node/share/ndi_aurora_node/cmake/: ament_cmake_export_include_directories-extras.cmake  export_ndi_aurora_nodeExport.cmake  ndi_aurora_nodeConfig.cmake
ros2/install/netft_reader/lib/netft_reader/: netft_baseraw_node  netft_node
ros2/install/netft_reader/share/ament_index/resource_index/package_run_dependencies/: netft_reader
ros2/install/netft_reader/share/netft_reader/: local_setup.dsv  local_setup.sh  package.dsv  package.sh  package.zsh
ros2/install/netft_reader/share/netft_reader/cmake/: netft_readerConfig.cmake
ros2/install/palpation_calibration/share/palpation_calibration/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2/install/sync_logger_node/share/sync_logger_node/: local_setup.sh  package.sh
ros2/install/sync_logger_node/share/sync_logger_node/cmake/: sync_logger_nodeConfig.cmake
ros2/log/: latest_build
ros2/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2/src/install/palpation_calibration/share/palpation_calibration/: package.sh
ros2/src/log/: latest_build
ros2/src/ndi_aurora_node/: CMakeLists.txt
ros2/src/palpation_calibration/: package.xml  setup.cfg  setup.py
ros2/src/palpation_calibration/palpation_calibration/: kinematic_calibration_runner.py
ros2/src/palpation_calibration/palpation_calibration/install/: local_setup.sh  setup.sh
ros2/src/palpation_calibration/palpation_calibration/log/: latest_build
src/: Compliance.cpp  CosseratSolver.cpp  StaticsEvaluation.cpp  TipPoseTangentCalibFactor.cpp  main_gtsam.cpp  main_gtsam_bias.cpp
(+1 files in other folders)
